# beebar

./: Cargo.toml
config/: config.toml
src/: app.rs  main.rs
src/backend/: mod.rs  traits.rs
src/backend/wayland/: layer_shell.rs  mod.rs
src/backend/x11/: mod.rs  window.rs
src/core/: bar.rs  config.rs  event.rs  layout.rs  mod.rs  popup.rs
src/core/module/: battery.rs  bluetooth.rs  brightness.rs  clock.rs  cpu.rs  custom.rs  memory.rs  mod.rs  network.rs  playback.rs  temperature.rs  tray.rs  volume.rs  window.rs  workspaces.rs
src/renderer/: cairo_renderer.rs  color.rs  font.rs  mod.rs  primitives.rs
